--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node --experimental-worker index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^3.11.0",
+    "@tensorflow/tfjs-backend-wasm": "^3.11.0",
     "axios": "^0.24.0",
     "underscore": "^1.13.1",
     "winston": "^3.3.3",
