--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^3.11.0",
     "@tensorflow/tfjs-backend-wasm": "^3.11.0",
+    "@tensorflow/tfjs-node": "^3.11.0",
     "axios": "^0.24.0",
     "underscore": "^1.13.1",
     "winston": "^3.3.3",
